Réglage du problème des accents dans les urls des videos
Juste une histoire absurde d'antislash essentiel pour s'échapper

--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -407,19 +407,19 @@ if(glob_quality==''){glob_quality='md'}
 
     playlist[{{ forloop.counter }}] = ['{{ r.video.titre }}', 
     {% if r.video.hd %}
-    '{{r.video.hd}}', 
+    '{{r.video.hd|echappe}}', 
     {% else %}
     'non',
     {% endif %}
 
     {% if r.video.md %}
-    '{{r.video.md}}', 
+    '{{r.video.md|echappe}}', 
     {% else %}
     'non',
     {% endif %}
 
     {% if r.video.sd %}
-    '{{r.video.sd}}', 
+    '{{r.video.sd|echappe}}', 
     {% else %}
     'non',
     {% endif %}
