apostrophes -- le retour
le retour des apostrphes

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -93,9 +93,9 @@
           <!-- <div id="txtHint" onmouseover="lien_ok(1)" onmouseout="lien_ok(0)" style="margin-left: 221.067px;"> -->
           <!-- </div> -->
 
-          <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
+          <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="/org" target="_newtab">
             
-              Signaler un bug\Proposer une suggestion
+              Se connecter
           </a>
 
           <a class="ml-auto btn btn-primary m-1 d-block d-xs-block d-md-none" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
