--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -93,7 +93,7 @@
           <!-- <div id="txtHint" onmouseover="lien_ok(1)" onmouseout="lien_ok(0)" style="margin-left: 221.067px;"> -->
           <!-- </div> -->
 
-          <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="/org" target="_newtab">
+          <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="/org">
             
               Se connecter
           </a>
