--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -92,15 +92,17 @@
             </div>
           <!-- <div id="txtHint" onmouseover="lien_ok(1)" onmouseout="lien_ok(0)" style="margin-left: 221.067px;"> -->
           <!-- </div> -->
-
+          {% if request.user.is_authenticated == False %}
           <a class="ml-auto btn btn-primary m-1 d-none d-md-block" href="/org">
             
               Se connecter
           </a>
 
-          <a class="ml-auto btn btn-primary m-1 d-block d-xs-block d-md-none" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
-              Bug
-          </a>
+          {% endif %}
+
+
+         
+ 
 
         </div>
 
@@ -279,8 +281,26 @@
             </span> {% endif %} {% endfor %}
           </span>
 
+                 {% endif %}
 
-          {% endif %}
+           <div class="dropdown-divider"></div>
+
+           <span>
+            <span id='video_epingle_id_+{{f.video.id}}'>
+              <a class="dropdown-item" href="https://docs.google.com/forms/u/0/d/e/1FAIpQLScnWrGA33Z6HbHlhkl-g0sqKDzbGaz16Yd0MVAl8hHbbWc_5g/viewform?usp=sf_link" target="_newtab">
+                <div class="">
+
+                  <div class="lateral_bar_button_text">
+                     	Signaler un Bug
+                  </div>
+
+                </div>
+              </a>
+            </span>
+          </span>
+
+
+   
 
 
 
