--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -20,8 +20,24 @@
 		Tant que vous n'êtes pas connecté, vous ne pouvez voir que les videos ouvertes au public.
 		</div>
 
-		{% endif %}
+		{% else %}
 
+		{% if can_proj %}
+		<div class="alert alert-warning alert-dismissible fade show" role="alert">
+		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
+    	<span aria-hidden="true">&times;</span>
+  		</button>
+			<h4><strong>Changelog (Parce nous tenons aux courant ceux qui s'investissent dans le site)</strong></h4>
+			
+			<p>- Bug sur les titres avec des apostrophes et des & réglé</p>
+			<p>- Ajout d'un système de playlist parfaitement fonctionnel (le système de modification des playlists arrive bientôt)</p>
+			<p>- Bugs mineurs de mise en page réglés</p>
+
+		</div>
+
+		{% endif %}
+		{% endif %}
+		
     
 
 {% if request.user.is_authenticated %}
