--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -27,7 +27,7 @@
 		<button type="button" class="close" data-dismiss="alert" aria-label="Close">
     	<span aria-hidden="true">&times;</span>
   		</button>
-			<h4><strong>Changelog (Parce nous tenons aux courant ceux qui s'investissent dans le site)</strong></h4>
+			<h4><strong>Changelog</strong></h4>
 			
 			<p>- Bug sur les titres avec des apostrophes et des & réglé</p>
 			<p>- Ajout d'un système de playlist parfaitement fonctionnel (le système de modification des playlists arrive bientôt)</p>
