Ajout de la fonctionnalité de modification des playlists
ça part

--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -30,8 +30,9 @@
 			<h4><strong>Changelog</strong></h4>
 			
 			<p>- Bug sur les titres avec des apostrophes et des & réglé</p>
-			<p>- Ajout d'un système de playlist parfaitement fonctionnel (le système de modification des playlists arrive bientôt)</p>
+			<p>- Ajout d'un système de playlist parfaitement fonctionnel </p>
 			<p>- Bugs mineurs de mise en page réglés</p>
+			<p>- Système de modification des playlists intégré et fonctionnel</p>
 
 		</div>
 
