--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -155,7 +155,7 @@
 
               {% if can_proj %}
             <div style=" padding:0;margin-right:-10px;">
-                <a  href="{% url 'add_playlist' video.id %}" class="btn btn-sm" style="background-color:white;" data-toggle="tooltip" data-placement="top" title="Ajouter la viéo à une playlist">
+                <a  href="{% url 'add_playlist' video.id %}" class="btn btn-sm" style="background-color:white;" data-toggle="tooltip" data-placement="top" title="Ajouter la vidéo à une playlist">
                     <img src={% static "admin/img/opticons/bookmark.svg" %} alt="edit" style="height:25px;margin-top:0px;" >
                 
                 </a>
