--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -97,8 +97,8 @@
           <div class="caption-content">
 
  <div id="video_video">
-            <video poster="{% static 'assets/images/Khaled Freak.mp4' %}" id="bgvid" playsinline autoplay muted loop>
-              <source src="videos/Projections_JTX/JTX2015_12_12_17/HD/Supr%C3%A9macie%20Partie%20I.mp4#t=0" type="video/mp4">
+            <video id="bgvid" playsinline autoplay muted loop>
+              <source src="/videos/Projections_JTX/JTX2015_15_11_17/MD/00_ChronoX2014.mp4" type="video/mp4">
             </video>
           </div>
 
@@ -184,7 +184,7 @@
             <div class="row">
               <div class="col-sm-12">
                 <div class="video-box">
-                  <div class="video-box-icon"><a class="video-pop-up" href="videos/Evenements/Campagne_Kes/Campagne_Kes_des_2k16/proj_mi_campagne/HD/016a_VaLeKCampagne.mp4"><span class="icon-video"></span></a></div>
+                  <div class="video-box-icon"><a class="video-pop-up" href="/videos/Projections_JTX/JTX2015_15_11_17/MD/00_ChronoX2014.mp4"><span class="icon-video"></span></a></div>
                   <div class="video-title font-alt">Dernière presta</div>
                   <div class="video-subtitle font-alt">Regardez la vidéo</div>
                 </div>
