--- a/videos/templates/add_playlist.html
+++ b/videos/templates/add_playlist.html
@@ -17,11 +17,11 @@
                 {% endfor %}
                 </select>
                 <br/><br/>
-
+            <div hidden>
             <label for="video">Vidéo</label>
-            <input class="form-control" id="video" size="60" type="text" name="video" value="{{video_id}}" />
+            <input class="form-control" id="video" size="60" type="text" name="video" value="{{video_id}}"/>
             <br/><br/>
-
+            </div>
 
 
             
