--- a/videos/templates/modifier_facade.html
+++ b/videos/templates/modifier_facade.html
@@ -69,7 +69,7 @@
                   </div>
                   <div class="form-group">
                     <label for="vid_presta">Vidéo presta</label>
-                    <input class="form-control" type="number" id="vid_presta" name="vid_presta" placeholder="Id de la vidéo" required="required" data-validation-required-message="Ce site n'est pas conçu sans vidéo de Presta" value="{{presta}}"/>
+                    <input class="form-control" type="number" id="vid_background" name="vid_presta" placeholder="Id de la vidéo" required="required" data-validation-required-message="Ce site n'est pas conçu sans vidéo de Presta" value="{{presta}}"/>
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
