loader sur la page

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -50,7 +50,9 @@
 
 <body>
   
-
+<div class="page-loader">
+        <div class="loader">Loading...</div>
+      </div>
 
 
 
@@ -462,7 +464,16 @@
 
 
 <script>
+
+
+
+
   checkbar();
+
+  $(window).on('load', function() {
+        $('.loader').fadeOut();
+        $('.page-loader').delay(350).fadeOut('slow');
+    });
 
   
   function highlight(phrase,mot){
