loader caché quand la vidéo est chargée

--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -523,6 +523,7 @@ function change_flux_to(qualite, from_strart='oui'){
   
   
   video.load();
+  $(".page-loader").hide();
   video.play();
 
   ids=['btn_quality_hd','btn_quality_md','btn_quality_sd']
