--- a/videos/templates/video.html
+++ b/videos/templates/video.html
@@ -576,6 +576,7 @@ $(function () {
 //       video.appendChild(source);
       
 //       video.load();
+
 //       video.play();
 //     }
 //  }
@@ -642,6 +643,7 @@ function change_flux_to(link,indice){
   // video.appendChild(source);
       
   video.load();
+  $(".page-loader").hide();
   video.play();
 
 
