--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -402,7 +402,7 @@ var current = 0;
   console.log("/video_vue/" + video_id + "/");
   $.ajax({
   type: "GET",
-  url: "/video_vue/" + video_id + "/",
+  url: "/jtx/video_vue/" + video_id + "/",
   dataType: "html",
   });
  }
