Animation retour haut de page

--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -28,7 +28,7 @@
     	<span aria-hidden="true">&times;</span>
   		</button>
 			<h4><strong>Changelog</strong></h4>
-			
+			<p>- Maintenant dans une proj cliquer sur une vidéo ramène en haut de la page</p>
 			<p>- Ajout d'un petit loader tout mignon</p>
 			<p>- Something big is coming ...</p>
 
