--- a/videos/templates/proj_new.html
+++ b/videos/templates/proj_new.html
@@ -550,6 +550,8 @@ function change_flux_to(qualite, from_strart='oui'){
 
 function launch(id,  from_strart='oui') {
 
+	 $('html').animate({scrollTop:0}, 'slow');
+
 	if(current>=1){
   // var table2 = $('#proj_elements')
   // table2.page.jumpToData( current.toString(), 0 );
