--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -253,6 +253,16 @@
             </div>
           </div>
           </a>
+          <a href="{% url 'stats' %}" class="dropdown-item">
+              <div class="d-flex ">
+                  
+                  <div style='margin-right:5px;'><img src="{% static "admin/img/opticons/dashboard.svg" %}" alt="hello"></div>
+            <div class="">
+              Statistiques
+            </div>
+          </div>
+          </a>
+
             {% endif %}
           {% endif %}
 
