--- a/videos/templates/index.html
+++ b/videos/templates/index.html
@@ -28,6 +28,7 @@
     	<span aria-hidden="true">&times;</span>
   		</button>
 			<h4><strong>Changelog</strong></h4>
+			<p>- Un onglet statistiques est apparu dans le menu de gauche, dedans, des statistiques sur le site. Attention la cinquième va vous surprendre</p>
 			<p>- Maintenant dans une proj cliquer sur une vidéo ramène en haut de la page</p>
 			<p>- Ajout d'un petit loader tout mignon</p>
 			<p>- Something big is coming ...</p>
