--- a/videos/templates/stats.html
+++ b/videos/templates/stats.html
@@ -6,9 +6,35 @@
 <link href="{% static 'chartist.min.css' %}" rel="stylesheet">
 
 
+
+<div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">VDJ</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div class="modal-body">
+        {% include "video_modal.html" with video=video_plus_vues.0 %}
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
 <div class="d-flex justify-content-center">
 	<div class="col-12">
 		<div class="card ">
+
+			<button type="button" class="btn btn-primary" data-toggle="modal" data-target="#exampleModal">
+  Démo VDJ
+</button>
+
 			<h1 class="card-header">Statistiques</h1>
 			<div class="card-content">
 				<div class="row">
