--- a/videos/templates/video_modal.html
+++ b/videos/templates/video_modal.html
@@ -8,7 +8,7 @@
     
     
     
-      <video id="video" class="embed-responsive-item" controls autoplay>
+      <video id="video" class="embed-responsive-item" controls>
         <source id="src" src=""> Your browser does not support the video tag.
           {% if  video.subtitles %}
           <track label="Français" kind="subtitles" srclang="fr" src="{{video.subtitles}}" default >
