--- a/videos/templates/video_modal.html
+++ b/videos/templates/video_modal.html
@@ -621,5 +621,7 @@ if(quality=='sd'){
   document.getElementById('btn_quality_sd').classList.add('active');
 }
 
+$("#video").pause();
+
 </script>
 
