fin de la facade
héhé

--- a/videos/templates/facade.html
+++ b/videos/templates/facade.html
@@ -647,29 +647,30 @@ Convaincus de la puissance de la vidéo comme outil de communication, nous créo
           <div class="container">
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
-                <h2 class="module-title font-alt">Get in touch</h2>
+                <h2 class="module-title font-alt">Dites-nous tout !</h2>
                 <div class="module-subtitle font-serif"></div>
               </div>
             </div>
             <div class="row">
               <div class="col-sm-6 col-sm-offset-3">
-                <form id="contactForm" role="form" method="post" action="php/contact.php">
+                <form id="contactForm" role="form" method="post" action="{% url 'treat_facade'%}">
+                  {% csrf_token %}
                   <div class="form-group">
-                    <label class="sr-only" for="name">Name</label>
-                    <input class="form-control" type="text" id="name" name="name" placeholder="Your Name*" required="required" data-validation-required-message="Please enter your name."/>
+                    <label class="sr-only" for="name">Nom</label>
+                    <input class="form-control" type="text" id="name" name="name" placeholder="Votre Nom*" required="required" data-validation-required-message="Please enter your name."/>
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
                     <label class="sr-only" for="email">Email</label>
-                    <input class="form-control" type="email" id="email" name="email" placeholder="Your Email*" required="required" data-validation-required-message="Please enter your email address."/>
+                    <input class="form-control" type="email" id="email" name="email" placeholder="Votre Email*" required="required" data-validation-required-message="Please enter your email address."/>
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="form-group">
-                    <textarea class="form-control" rows="7" id="message" name="message" placeholder="Your Message*" required="required" data-validation-required-message="Please enter your message."></textarea>
+                    <textarea class="form-control" rows="7" id="message" name="message" placeholder="Votre Message*" required="required" data-validation-required-message="Please enter your message."></textarea>
                     <p class="help-block text-danger"></p>
                   </div>
                   <div class="text-center">
-                    <button class="btn btn-block btn-round btn-d" id="cfsubmit" type="submit">Submit</button>
+                    <button class="btn btn-block btn-round btn-d" id="cfsubmit" type="submit">Envoyer</button>
                   </div>
                 </form>
                 <div class="ajax-response font-alt" id="contactFormResponse"></div>
