--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -253,6 +253,15 @@
             </div>
           </div>
           </a>
+          <a href="{% url 'messages_facade' %}" class="dropdown-item">
+              <div class="d-flex ">
+                  
+                  <div style='margin-right:5px;'><img src="{% static "admin/img/opticons/mail.svg" %}" alt="hello"></div>
+            <div class="">
+              Regarder les messages reçus sur le site pro
+            </div>
+          </div>
+          </a>
           <a href="{% url 'stats' %}" class="dropdown-item">
               <div class="d-flex ">
                   
