suite et fin facade

--- a/videos/templates/base.html
+++ b/videos/templates/base.html
@@ -258,7 +258,7 @@
                   
                   <div style='margin-right:5px;'><img src="{% static "admin/img/opticons/mail.svg" %}" alt="hello"></div>
             <div class="">
-              Regarder les messages reçus sur le site pro
+              Regarder les messages reçus
             </div>
           </div>
           </a>
